<resources>
    <string name="app_name">MedsGen</string>
    <string name="name">NAME:</string>
    <string name="details">Details</string>
    <string name="salt">Salt:</string>
    <string name="nongenericname">NonGenericName</string>
    <string name="genericname">GenericName</string>
    <string name="add">ADD</string>
    <string name="searchMed">SearchMed</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="noNet">nonet</string>
</resources>