<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:animateLayoutChanges="true"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/details"
        android:textAlignment="center"
        android:padding="15dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginBottom="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/showNonGeneric"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/genericname"
            android:paddingStart="10dp"
            android:textSize="15sp"
            android:paddingEnd="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:layout_height="match_parent"
            android:text="@string/salt"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/showGeneric"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nongenericname"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:background="@drawable/btn_back"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="15dp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

</LinearLayout>